# CythonOnPyPI

./: .gitignore  CITATION.cff  Makefile  README.md  pyproject.toml  setup.py
.github/workflows/: cd.yml  cd_alt.yml  ci.yml  update_citation.yml
src/cython_on_pypi/converters/: cy_degrees.c  cy_degrees.pyx  degrees.py
tests/: test_classic_degrees.py  test_cython_degrees.py  test_imports.py
