[project]
authors = [{ name = "Adrien Plaçais", email = "placais@lpsc.in2p3.fr" }]
dependencies = [
   "numpy>=2.0.1, <3.0.0",
   "setuptools>=64.0.0",
   "Cython>=3.0.10, <4.0.0",
]
dynamic = ["version"]
name = "CythonOnPyPI"
readme = "README.md"
requires-python = ">=3.12"

[project.optional-dependencies]
# cython = ["Cython>=3.0.10, <4.0.0"]
test = ["pytest>=8.3.2, <9.0.0"]

[tool.black]
line-length = 79
target-version = ["py312"]

[tool.isort]
line_length = 79
profile = "black"
src_paths = ["./src"]

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib", "--strict-markers"]
markers = [
   "cython: mark tests that require a Cython compilation (deselect with '-m \"not cython\"')",
]
filterwarnings = ["ignore:.*cKDTree.*:DeprecationWarning"]
minversion = "6.0"
testpaths = ["tests"]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools_scm]

[tool.cibuildwheel]
build = "cp312-*"
build-verbosity = 1
test-command = 'pytest {project}/tests'
# Install [test] dependencies:
test-extras = "test"

[build-system]
build-backend = "setuptools.build_meta"
requires = [
   "setuptools>=64",
   "Cython>=3.0.10, <4.0.0",
   "numpy>=2.0.1, <3.0.0",
   "setuptools-scm>=8, <9",
   "wheel",
]
