[project]
authors = [{ name = "Adrien Plaçais", email = "placais@lpsc.in2p3.fr" }]
dependencies = ["numpy>=2, <3"]
dynamic = ["version"]
name = "CythonOnPyPI"
readme = "README.md"
requires-python = ">=3.12"

[project.optional-dependencies]
test = ["pytest>=8.3.2, <9"]

[tool.black]
line-length = 79
target-version = ["py312"]

[tool.isort]
line_length = 79
profile = "black"
src_paths = ["./src"]

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib", "--strict-markers"]
markers = [
   "cython: mark tests that require a Cython compilation (deselect with '-m \"not cython\"')",
]
filterwarnings = ["ignore:.*cKDTree.*:DeprecationWarning"]
minversion = "6.0"
testpaths = ["tests"]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools_scm]

[tool.cibuildwheel]
build-verbosity = 1
test-command = 'pytest {project}/tests'
test-extras = "test"

[build-system]
build-backend = "setuptools.build_meta"
requires = [
   "setuptools>=64",
   "Cython>=3, <4",
   "numpy>=2, <3",
   "setuptools-scm>=8, <9",
]
